Change default redirect page after login to main.html, Update fields in viewProfile and link jobcode to profile

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-	background: #f9f6f1;
+	background: url(../../static/images/body-bg.png);
 	font: 13px/1.7em 'Open Sans';
 	margin: 0;
 	padding: 0;
@@ -1352,7 +1352,7 @@ html {
 }
 
 body {
-	background: #f9f6f1;
+	background: url(../../static/images/body-bg.png);
 	font: 13px/1.7em 'Open Sans';
 	margin: 0;
 	padding: 0;
