Updating Dashboard CSS

--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -30,7 +30,9 @@
   <div class="main-inner">
     <div class="container">
       <div class="row">
-        <div class="span6">
+      <table>
+      <tr><td>
+        <div class="span6 span-new">
           <div class="widget widget-nopad">
             <div class="widget-header"> <i class="icon-list-alt"></i>
               <h3>Recent Positions</h3>
@@ -131,7 +133,7 @@
                     <div class="text"> All I want is to be a monkey of moderate intelligence who wears a suit… that's why I'm transferring to business school! I had more, but you go ahead. Man, I'm sore all over. I feel like I just went ten rounds with mighty Thor. File not found. </div>
                   </div>
                 </li>
-                <li class="from_user left"> <a href="#" class="avatar"><img src="static/images/message_avatar1.png"/></a>
+               <!--  <li class="from_user left"> <a href="#" class="avatar"><img src="static/images/message_avatar1.png"/></a>
                   <div class="message_wrap"> <span class="arrow"></span>
                     <div class="info"> <a class="name">Deepankar </a> <span class="time">1 Day ago</span>
                       <div class="options_arrow">
@@ -162,15 +164,16 @@
                     </div>
                     <div class="text"> That's the ONLY thing about being a slave. Now, now. Perfectly symmetrical violence never solved anything. Uh, is the puppy mechanical in any way? As an interesting side note, as a head without a body, I envy the dead. </div>
                   </div>
-                </li>
+                </li> -->
               </ul>
             </div>
             <!-- /widget-content --> 
           </div>
           <!-- /widget --> 
         </div>
+        </td><td>
         <!-- /span6 -->
-        <div class="span6">
+        <div class="span6 span-new">
           <div class="widget">
             <div class="widget-header"> <i class="icon-bookmark"></i>
               <h3>Important Shortcuts</h3>
@@ -227,7 +230,10 @@
           <!-- /widget --> 
          
         </div>
+        </td>
         <!-- /span6 --> 
+        </tr>
+        </table>
       </div>
       <!-- /row --> 
     </div>
