Add Schedule Module in viewProfile and restructure sendMail service

--- a/src/main/webapp/views/viewProfile.html
+++ b/src/main/webapp/views/viewProfile.html
@@ -231,3 +231,130 @@
 
 </div>
 
+<div ng-controller="editProfileCtrl" align="left">
+ 
+  <accordion close-others=false>
+    
+    <accordion-group is-open="status.isFirstOpen" >
+        <accordion-heading>
+          Interview Schedule<i class="pull-right glyphicon" ng-class="{'glyphicon-plus': status.open, 'glyphicon-minus': !status.open}"></i>
+        </accordion-heading>
+        
+        <div class="row">
+        	<div align="right">
+				<div class="col-md-1"></div>
+				<div class="col-md-2">			
+					<label class="lbl" for="candidateName"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Interviewer Name: </label>
+				</div>
+				<div class="col-md-3" style="display: inline;">
+					<input style="margin-left:0%;" type="text" id="cname" name="iname" class="form-control"  ng-change=""
+				   ng-model="" placeholder="Enter Interviewer Name" ng-pattern="/^[a-zA-Z _]*$/" required>
+				   
+				</div>   
+			</div>	
+				
+				<div class="control-group">
+					<div class="col-md-2" align="right">
+					 	<label class="lbl" for="emailId"><i class="glyphicon glyphicon-envelope"></i>&nbsp;&nbsp;Type Of Interview: </label>
+					</div>
+					<div class="col-md-3">	
+						<select class="form-control" id="typeOfInterview">
+						<option>Select Interview Type</option>
+						<option>Telephonic</option>
+						<option>Skype</option>
+						<option>Face To Face</option>
+						</select>				
+					</div>					
+				</div>
+        </div>
+        
+        <br>
+		<div class="row">
+        	<div align="right">
+					<div class="col-md-1"></div>
+					<div class="col-md-2">			
+						<label class="lbl" for="mobileNo"><i class="glyphicon glyphicon-phone"></i>&nbsp;&nbsp;Interviewer Mob. No.: 	</label>
+					</div>
+					<div class="col-md-3">
+						<input type="text" ng-change="" maxlength="18" ng-model="" name="mobileNo" id="mobileNo"
+									ngPattern="1234567890 " class="form-control" placeholder="Enter mobileNo" ui-br-phone-number required>
+					</div>
+			</div>   
+				
+			<div class="control-group">
+				<div class="col-md-2" align="right">
+				 	<label class="lbl" for="skypeId"><i class="glyphicon glyphicon-phone-alt"></i>&nbsp;&nbsp;Skype ID:</label>
+				</div>
+				<div class="col-md-3">	
+					<input type="text" ng-change="" ng-model="" name="altmobileNo" id="skypeId"
+								ngPattern="" class="form-control" placeholder="Enter Skype ID." required>			
+				</div>					
+			</div>
+        </div>
+        
+        <br>
+		<div class="row">
+        	<div align="right">
+					<div class="col-md-1"></div>
+					<div class="col-md-2">			
+						<label class="lbl" for="location"><i class="glyphicon glyphicon-plane"></i>&nbsp;&nbsp;Location</label>
+					</div>
+					<div class="col-md-3">
+						<select class="form-control" id="location">
+						<option>Select Option</option>
+						<option>Pune</option>
+						<option>Hyderabad</option>
+						<option>Chennai</option>
+						<option>Bengaluru</option>
+						</select>
+					</div>
+			</div>   
+				
+			<div class="control-group">
+				<div class="col-md-2" align="right">
+				 	<label class="lbl" for="date"><i class="glyphicon glyphicon-plane"></i>&nbsp;&nbsp;Interview Date: </label>
+				</div>
+				<div class="col-md-3">	
+					
+							
+				</div>					
+			</div>
+        </div>
+        
+        <br>
+        
+        <div class="row">
+        	<div align="right">
+					<div class="col-md-1"></div>
+					<div class="col-md-2">			
+						
+					</div>
+					<div class="col-md-3">
+						
+					</div>
+			</div>   
+				
+			<div class="control-group">
+				<div class="col-md-2" align="right">
+				 	
+				</div>
+				<div class="col-md-3">	
+					<a href="" class="btn btn-primary" ng-click="" ng-disabled="">
+         <span class="glyphicon glyphicon-ok-circle"></span> Schedule
+    </a>
+							
+				</div>					
+			</div>
+        </div>
+
+        
+    </accordion-group>
+    
+    </accordion>
+    </div>
+
+<br><br>
+
+<a href="" class="btn btn-primary" ng-click="" ng-disabled="">
+         <span class="glyphicon glyphicon-ok-circle"></span> Schedule
+    </a>
