Adding job code link in searchprofile grid

--- a/src/main/webapp/views/searchProfile.html
+++ b/src/main/webapp/views/searchProfile.html
@@ -37,20 +37,20 @@
 								<input name="candidateName" class="form-control input-sm" ng-change="searchDisable=false;disableSearch()" 
 								style="position:absolute;top:35px;"
 								id="candidateName" ng-model="filterOptions.filterText" placeholder="Enter Name" required> 
-						</div></td><td>
+						</div></td><!-- <td>
 					<a href="" id="searchBtn" ng-disabled="searchDisable" class="btn btn-primary" >
          		 <span class="glyphicon glyphicon-search" style="position:aboslute;top:1px;"></span> Search
        			 </a>
-				</td>
+				</td> -->
 				<td>
 				<a id="rsBtn" ui-sref="createProfile" class="btn btn-primary">
          		 <span class="glyphicon glyphicon-plus" style="position:aboslute;top:1px;"></span> Create
        			 </a>
 				</td>
 				<td>
-				<a id="approveBtn" href="" class="btn btn-primary" ng-disabled="approveBtnDisable">
-         		 <span class="glyphicon glyphicon-ok" style="position:aboslute;top:1px;"></span> Approve
-       			 </a>
+				<!-- <a id="approveBtn" href="" class="btn btn-primary" ng-disabled="approveBtnDisable">
+         		 <span class="glyphicon glyphicon-ok" style="position:aboslute;top:1px;"></span> Schedule
+       			 </a> -->
 
 				</td>
 				</tr>		
